setup calendar screen like in fragment_shifts.xml is done. + option to select date
Next TODO:
setup firebase efficent option to save a constraint data
be able to add up to 2 constraints per week.
be able to add constraint to one week ahead.
create shift Object for each day
algorithm class to automate shifts given.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Deep_Navy_Blue">#14213D</color> //secondery color
+    <color name="Bright_Orange">#FF6B35</color> //primary color
+    <color name="Golden_Yellow">#FCA311</color> //accent
+    <color name="Light_Gray">#E5E5E5</color> //background
+
 </resources>
