started working on the main algorithm to schedule a shifts. main idea:
sperate the employees to 2 lists,
specialProperties
AllEmployees.

first, shcedule a Min of MIN_SPC_EMP per hour.
then schdule, for all the worker.
each time adding an employee, add a constraint for the working time + rest of min of 8 hours.
pick the employees by priority queue.
schdule each employee based on how many shifts he does per week.

Next TODO:
setup firebase efficent option to save a constraint data
be able to add up to 2 constraints per week.
be able to add constraint to one week ahead.
create shift Object for each day
algorithm class to automate shifts given.

--- a/app/src/main/res/layout/fragment_shifts.xml
+++ b/app/src/main/res/layout/fragment_shifts.xml
@@ -139,7 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:layout_gravity="center"
-        android:text=""
+        android:text="Error"
         android:textColor="@color/Error_Red"
         android:textSize="20sp"
         android:layout_marginBottom="20sp"/>
