--- a/app/src/main/res/layout/item_constraint.xml
+++ b/app/src/main/res/layout/item_constraint.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:layout_width="0dp"
+        android:id="@+id/nameTextView"
         android:layout_height="wrap_content"
         android:layout_weight="0.7"
         android:text="constraint:"
